<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_narrow2"
    tools:context="com.foodie.app.ui.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo4" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/userNameEditText"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_full_name"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="20sp"
        app:met_baseColor="#ffffff"
        app:met_errorColor="#212121"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="#ffffff"
        app:met_helperTextColor="#795548"
        app:met_primaryColor="#ffffff"
        app:met_singleLineEllipsis="true"
        app:met_textColor="#FAFAFA"
        app:met_textColorHint="@color/hint_color"
        app:met_underlineColor="#FAFAFA"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
       />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/confPwdNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="20sp"
        app:met_baseColor="#ffffff"
        app:met_errorColor="#212121"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="#ffffff"
        app:met_helperTextColor="#795548"
        app:met_primaryColor="#ffffff"
        app:met_singleLineEllipsis="true"
        app:met_textColor="#FAFAFA"
        app:met_textColorHint="@color/hint_color"
        app:met_underlineColor="#FAFAFA"
        app:layout_constraintRight_toRightOf="@+id/pwdEditText"
        app:layout_constraintLeft_toLeftOf="@+id/pwdEditText"
        app:layout_constraintTop_toBottomOf="@+id/pwdEditText"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/pwdEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="20sp"
        app:met_baseColor="#ffffff"
        app:met_errorColor="#212121"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="#ffffff"
        app:met_helperTextColor="#795548"
        app:met_primaryColor="#ffffff"
        app:met_singleLineEllipsis="true"
        app:met_textColor="#FAFAFA"
        app:met_textColorHint="@color/hint_color"
        app:met_underlineColor="#FAFAFA"
        app:layout_constraintRight_toRightOf="@+id/emailEditText"
        app:layout_constraintLeft_toLeftOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintHorizontal_bias="1.0"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textNoSuggestions"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/userNameEditText"
        app:met_baseColor="#ffffff"
        app:met_errorColor="#212121"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="#ffffff"
        app:met_helperTextColor="#795548"
        app:met_primaryColor="#ffffff"
        app:met_singleLineEllipsis="true"
        app:met_textColor="#FAFAFA"
        app:met_textColorHint="@color/hint_color"
        app:met_underlineColor="#FAFAFA"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        app:layout_constraintRight_toRightOf="@+id/userNameEditText"
        />

    <com.dx.dxloadingbutton.lib.LoadingButton
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        app:btnColor="#f44336"
        app:resetAfterFailed="true"
        app:rippleColor="#000000"
        app:text="@string/sign_up_button"
        app:layout_constraintLeft_toLeftOf="@+id/confPwdNameEditText"
        app:layout_constraintRight_toRightOf="@+id/confPwdNameEditText"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/confPwdNameEditText" />

    <TextView
        android:id="@+id/newAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/existing_account"
        android:textColor="#FAFAFA"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/confPwdNameEditText" />

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/sign_in_view"
        android:textColor="#FAFAFA"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/newAccountTextView"
        app:layout_constraintLeft_toRightOf="@+id/newAccountTextView" />

</android.support.constraint.ConstraintLayout>
