<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="225dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        card_view:cardUseCompatPadding="true">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/activity_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/activity_image"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_collection_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/food2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/tile" />

            <RelativeLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/dish_description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="@string/lorem_ipsum_description"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_title_text_view"
                    app:layout_constraintRight_toRightOf="@+id/activity_title_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/activity_title_text_view"
                    android:layout_below="@+id/activity_title_text_view"
                    android:layout_alignLeft="@+id/activity_title_text_view"
                    android:layout_alignStart="@+id/activity_title_text_view"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:id="@+id/rating_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/stars_default"
                    android:textColor="@color/secondary_text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/activity_rating_bar"
                    app:layout_constraintLeft_toRightOf="@+id/activity_rating_bar"
                    app:layout_constraintTop_toBottomOf="@+id/dish_description_text_view" />

                <com.iarcuschin.simpleratingbar.SimpleRatingBar
                    android:id="@+id/activity_rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srb_borderColor="@android:color/transparent"
                    app:srb_fillColor="@color/green_500"
                    app:srb_starBackgroundColor="#80000000"
                    app:srb_starSize="15dp"
                    app:srb_starBorderWidth ="0.1"
                    app:srb_numberOfStars="5"
                    app:srb_rating="3.5"
                    app:srb_stepSize="0.5"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:id="@+id/activity_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_name"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-regular"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_activity_cost"
                    android:textColor="@color/green_500"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="8dp"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-bold"/>

            </RelativeLayout>

            <!--<ImageButton-->
                <!--android:id="@+id/activity_menu_button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@null"-->
                <!--android:contentDescription="@string/menu_button"-->
                <!--android:hapticFeedbackEnabled="true"-->
                <!--app:srcCompat="@drawable/ic_more_vert_white_24dp"-->
                <!--android:tint="@color/white"-->
                <!--android:layout_gravity="end|top"/>-->
        </FrameLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>