<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/business_image_view"
                android:layout_width="84dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:transitionName="business_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.37"
                app:srcCompat="@drawable/firebase"
                android:layout_height="84dp" />

            <ImageButton
                android:id="@+id/businessMenuButton"
                android:layout_width="24dp"
                android:layout_gravity="end"
                android:background="?android:attr/selectableItemBackground"
                android:hapticFeedbackEnabled="true"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_action_navigation_more_vert"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp" />

            <LinearLayout
                android:id="@+id/details"
                android:layout_width="0dp"

                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/business_image_view"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="84dp"
                android:paddingTop="8dp"

                app:layout_constraintVertical_bias="1.0"
                android:layout_marginEnd="32dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="32dp">

                <TextView
                    android:id="@+id/businessTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/businessAddressTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="@string/address_placeholder"
                    android:textColor="@color/secondary_text"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/numOfActivities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activities_placeholder"
                    android:textColor="@color/secondary_text"
                    android:textSize="13sp" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>