<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="wrap_content"
    android:padding="1dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/business_image_view"
                android:transitionName="business_logo"
                app:srcCompat="@drawable/mcdonalds_logo"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@null"
                android:scaleType="fitEnd" />

            <LinearLayout
                android:id="@+id/details"
                android:layout_width="0dp"

                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                app:layout_constraintRight_toLeftOf="@+id/business_image_view"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp">

                <TextView
                    android:id="@+id/businessTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/primary_text"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/businessAddressTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="@string/address_placeholder"
                    android:textColor="@color/secondary_text"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/numOfActivities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activities_placeholder"
                    android:textColor="@color/secondary_text"
                    android:textSize="13sp" />
            </LinearLayout>

            <Button
                android:text="Delete"
                android:layout_width="wrap_content"
                android:id="@+id/deleteButton"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="8dp"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/business_image_view"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/primary"
                android:layout_height="36dp" />

            <!--<ImageButton-->
                <!--android:id="@+id/businessMenuButton"-->
                <!--android:layout_width="24dp"-->
                <!--android:layout_height="48dp"-->
                <!--android:layout_gravity="end"-->
                <!--android:background="@null"-->
                <!--android:hapticFeedbackEnabled="true"-->
                <!--app:srcCompat="@drawable/ic_action_navigation_more_vert"-->
                <!--android:visibility="invisible"-->
                <!--android:clickable="false"-->
                <!--tools:layout_editor_absoluteY="132dp"-->
                <!--tools:layout_editor_absoluteX="360dp" />-->

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>